--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -37,11 +37,14 @@
             opacity: 0.6;
         }
         img{
-            width: 100px;
+            width: 45px;
             margin-left: 20px;
-            top: 20px;
+            margin-bottom: 0;
+            margin-top: 0;
+            top: 10px;
             opacity: 0;
-            height: auto;
+            height: 45px;
+            width: 50px;
             animation: rotateIn 1s linear both;
             animation-delay: 1.4s;
 
@@ -75,3 +78,4 @@ h2{
         color: #333;
     }
 }
+
