Added Portfolio component

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -77,6 +77,12 @@ nav{
          }
         }
 
+        a.portfolio-link{
+            &:after {
+             content: 'PORTFOLIO';
+          }
+         }
+
         a.contact-link{
             &:after {
              content: 'CONTACT';
