--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -34,17 +34,10 @@
     animation-delay: 1s;
 
 }
+.portfolio-page,
 .contact-page,
 .about-page{
-    .text-zone{
-        position: absolute;
-        left: 10%;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 35%;
-        vertical-align: middle;
-        display: 'table-cell';
-        max-height: 90%;
+    
 
         h1{
             font-size: 53px;
@@ -98,6 +91,15 @@
                 animation-delay: 1.3s;
             }
         }
+    .text-zone{
+            position: absolute;
+            left: 10%;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 35%;
+            vertical-align: middle;
+            display: 'table-cell';
+            max-height: 90%;
     }
     .text-animate-hover{
         &:hover{
