--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,24 @@ body {
   margin: 0;
   font: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
   color: #444;
-  background: #022c43;
+  /* background */
+  background: #283e3d;
+  /* background: #022c43; */
   overflow: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+.dashboard {
+  margin-top: 200px;
+  margin-left: 200px;
+
+}
+
+@media screen and (max-width: 1200px) {
+  body {
+    overflow: visible;
+  }
+  
+}
