--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -7,8 +7,13 @@
     position: absolute;
     right: 0;
     overflow: hidden;
+    
   }
-  
+  .stars{
+    width: 100%;
+    position: absolute;
+
+  }
   .cubespinner {
     animation-name: spincube;
     animation-timing-function: ease-in-out;
@@ -30,6 +35,8 @@
       justify-content: center;
       align-items: center;
       box-shadow: 0 0 20px 0px lightyellow;
+      // margin-top: 70px;
+      // border-top: 20px;
     }
   
     .face1 {
@@ -79,6 +86,7 @@
       transform: rotateX(90deg);
     }
   }
+  
 
   @media screen and (max-width: 1200px) {
     .stage-cube-cont{
@@ -86,6 +94,6 @@
       width: 100%;
       height: 0%;
       overflow: visible;
-      
+
     }
   }
