--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -10,6 +10,8 @@
     .logo {
       display: block;
       padding: 8px 0;
+      min-width: 65px;
+      size: 3x;
   
       img {
         display: block;
