--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -97,6 +97,11 @@
           content: 'PORTFOLIO';
         }
       }
+      a.skills-link {
+        &:after {
+          content: 'SKILLS';
+        }
+      }
   
       a.active {
         svg {
