--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   font: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
   color: #444;
   /* background */
-  background: #283e3d;
+  background: #5d8d8b;
   /* background: #022c43; */
   overflow: hidden;
   display: block;
