--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -42,14 +42,14 @@
 }
 .flat-button{
     color: #ffd700;
-    display: block;
+    // display: block;
     background: 0 0;
     font: 11px;
     letter-spacing: 3px;
     text-decoration: none;
     padding: 8px 10px;
     border: 1px solid #ffd700;
-    float: right;
+    // float: right;
     border-radius: 4px;
     &:hover{
         background: #ffd700;
