--- a/src/App.scss
+++ b/src/App.scss
@@ -4,16 +4,16 @@ $primary-color: #ffd700;
 @import '~loaders.css/src/animations/pacman.scss';
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url('./assets/fonts/helvetica-neu.ttf') format('ttf');
+  src: url('../public/fonts/helvetica-neu.ttf') format('ttf');
 }
 @font-face {
   font-family: 'La Belle Aurore';
-  src: url('./assets/fonts/LaBelleAurore.woff2') format('woff2');
+  src: url('../public/fonts/LaBelleAurore.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Coolvetica';
-  src: url('./assets/fonts/CoolveticaRg-Regular.woff2') format('woff2');
+  src: url('../public/fonts/CoolveticaRg-Regular.woff2') format('woff2');
 }
 input,
 textarea{
