--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,16 +1,16 @@
 
 @font-face {
     font-family: 'Helvetica Neue';
-    src: url('../../assets/fonts/helvetica-neu.ttf') format('ttf');
+    src: url('../../assets/fonts/helvetica-neu.ttf') format('truetype');
   }
   @font-face {
     font-family: 'La Belle Aurore';
-    src: url('../../assets/fonts/LaBelleAurore.woff2') format('woff2');
+    src: url('../../assets/fonts/LaBelleAurore.woff') format('woff');
   }
   
   @font-face {
     font-family: 'Coolvetica';
-    src: url('../../assets/fonts/CoolveticaRg-Regular.woff2') format('woff2');
+    src: url('../../assets/fonts/CoolveticaRg-Regular.woff') format('woff');
   }
 
 .page{
