--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -77,6 +77,7 @@
         &:first-child {
           &:after {
             content: 'HOME';
+            font-weight: 800;
           }
         }
       }
@@ -84,23 +85,34 @@
       a.about-link {
         &:after {
           content: 'ABOUT';
+          font-weight: 800;
         }
       }
   
       a.contact-link {
         &:after {
           content: 'CONTACT';
+          font-weight: 800;
         }
       }
   
       a.portfolio-link {
         &:after {
           content: 'PORTFOLIO';
+          font-weight: 800;
         }
       }
       a.skills-link {
         &:after {
           content: 'SKILLS';
+          font-weight: 800;
+
+        }
+      }
+      a.blog-link {
+        &:after {
+          content: 'BLOG';
+          font-weight: 800;
         }
       }
   
