--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -13,7 +13,7 @@
         font-size: 53px;
         margin: 0;
         font-family: 'Coolvetica';
-        font-weight: 400;
+        font-weight: 500;
 
         &::before{
             content: '<h1>';
@@ -52,9 +52,10 @@
     }
 }
 h2{
-    color: #8d8d8d;
+    color: #daa381;
+    // color: #8d8d8d;
     margin-top: 20px;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 11px;
     font-family: sans-serif;
     letter-spacing: 3px;
