--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -55,6 +55,8 @@
         background: #ffd700;
         color: #333;
     }
+    animation: fadeIn 1s 1.8s backwards;
+
 }
 @media screen and (max-width: 1200px) {
     .sphere-container{
