Added styles for <p>

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,5 +1,10 @@
 .ylink{
   color: #ffd700;
+  font-weight: bolder;
+}
+.yspan{
+  color: #ffd700;
+  font-weight: 1000;
 }
 .stage-cube-cont {
     width: 50%;
