--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -82,18 +82,21 @@ h2{
 
 .pic {
     position: absolute;
-    width: 400px; /* Adjust the width of the image as needed */
+    width: 550px; /* Adjust the width of the image as needed */
     height: auto; /* Maintain aspect ratio */
     border-radius: 50%; /* Apply a circular border radius */
     display: block;
     left: 600px;
-    top: 100px;
+    top: 1px;
     margin-left: 30px;
+    z-index: 2;
 
     float: right;
     height: auto;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition-duration: 2s;
     animation: ease-in 1s 1.8 backwards;
-    animation-delay: 3s;
+    animation-delay: 1s;
     overflow: hidden;
 
 
