--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -111,6 +111,9 @@
             &:nth-of-type(4){
                 animation-delay: 1.3s;
             }
+            &:nth-of-type(5){
+                animation-delay: 1.4s;
+            }
         }
     .text-zone{
             position: absolute;
