--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;600;700;800;900&display=swap');
-
+.yspan{
+    color: #fdd700;
+    font-weight: 900;
+}
 .skills-page{
     position: absolute;
     
