--- a/src/components/Blog/index.scss
+++ b/src/components/Blog/index.scss
@@ -64,7 +64,7 @@
         .title {
             margin-bottom: 0;
             margin-top: 0;
-            color: #fff;
+            color: #ffd700;
             font-size: 24px;
             font-weight: 500;
              line-height: 1px;
@@ -185,13 +185,43 @@
         h1.page-title{
             margin-left: 20px;
             margin-top: 20px;
+            font-size: 45px;
         }
         .image-box{
             height: 200px;
             max-width: calc(50% - 10px);
+            .description{
+                font-size: 10px;
+                word-wrap:break-word;
+                width: fit-content;
+                font-weight: 900;
+                color: #fff;
+                padding-left: 0;
+                padding-bottom: 2px;
+            }
+            .content{
+                padding: 2px 6px;
+            }
+            .title{
+                font-size: 11px;
+                font-weight: bolder;
+                color: #ffd700;                
+            }
+
+            .btn{
+                content: 'View';
+                text-align: left;
+                align-self: center;
+                max-width: fit-content;
+                font-size: 8px;
+                padding-left: 10px;
+                padding-right: 10px;
+                font-weight: 800;
+                display: block;
+            }
         }
-        .title{
-            display: none;
-        }
+
+        
+        
     }
 }
