--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -143,7 +143,7 @@
         &.about-page,
         &.contact-page, 
         &.portfolio-page,
-        &.blog-page
+        &.blog-page,
         &.skills-page{
 
             .text-zone{
