--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -38,7 +38,7 @@
             position: absolute;
             width: 100%;
             z-index: 3;
-            padding: 10px 20px;
+            padding: 10px 10px;
             transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
             background: linear-gradient(
                 180deg,
@@ -118,6 +118,7 @@
         padding: 20px;
         box-sizing: border-box;
 
+
         h1.page-title{
             margin-left: 20px;
             margin-top: 20px;
@@ -125,6 +126,26 @@
         .image-box{
             height: 200px;
             max-width: calc(50% - 10px);
+            .title{
+                font-size: 10px;
+                font-weight: bolder;
+                color: #ffd700;
+
+            }
+            .content{
+                padding: 2px 6px;
+            }
+            .description{
+                font-size: 8px;
+                font-weight: bold;
+            }
+            .btn{
+                font-size: 6px;
+                font-weight: 800;
+                width: fit-content;
+                padding-right: 10px;
+                padding-left: 10px;
+            }
         }
     }
 }
