--- a/src/components/Blog/index.scss
+++ b/src/components/Blog/index.scss
@@ -192,7 +192,6 @@
             max-width: calc(50% - 10px);
             .description{
                 font-size: 10px;
-                word-wrap:break-word;
                 width: fit-content;
                 font-weight: 900;
                 color: #fff;
@@ -201,11 +200,17 @@
             }
             .content{
                 padding: 2px 6px;
+
             }
             .title{
-                font-size: 11px;
+                font-size: 10px;
                 font-weight: bolder;
-                color: #ffd700;                
+                color: #ffd700;  
+                width: fit-content;
+                
+        
+
+
             }
 
             .btn{
