--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -51,7 +51,7 @@
         .title {
             margin-bottom: 0;
             margin-top: 0;
-            color: #fff;
+            color: #ffd700;
             font-size: 24px;
             font-weight: 500;
             line-height: 24px;
