--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -162,3 +162,21 @@ h2{
     
 
 }
+@media screen and (max-width: 800px) {
+    .pic{
+            width: 60%;
+           height: 60%;
+    }
+    
+    .home-page{
+        h1{
+            font-size: 44px;
+        }
+        h2{
+            font-size: 12px;
+        }
+
+    }
+    
+
+}
