--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -115,3 +115,33 @@
     
     
 }
+@media screen and (max-width:800px) {
+
+    .sphere-container{
+        float: none;
+        width: 50%;
+        height: 400px;
+        margin: 0;
+        overflow: visible;
+        position: initial;
+        // display: none;
+
+    }
+    
+    .text-sphere{
+        float: none;
+        width: 100%;
+        height: 400px;
+        margin: 0;
+        position: initial;
+        // display: none;
+    }
+    .tagcloud{
+        // display: none;
+        float: none;
+        width: 100%;
+        height: 400px;
+        margin: 0;
+        position: initial;
+    }
+}
