--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -6,6 +6,9 @@
   color: #ffd700;
   font-weight: 1000;
 }
+// p + p {
+//   text-indent: 30px;
+// }
 .stage-cube-cont {
     width: 50%;
     height: 100%;
