--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -6,6 +6,12 @@
   color: #ffd700;
   font-weight: 1000;
 }
+// .about-page{
+//   overflow: auto;
+// }
+.text-zone{
+  overflow: auto;
+}
 // p + p {
 //   text-indent: 30px;
 // }
