--- a/src/components/Stars/index.scss
+++ b/src/components/Stars/index.scss
@@ -3,12 +3,13 @@
     position: absolute;
     width: 2px;
     height: 2px;
-    background-color: #ffffff;
+    background-color: #ffd700;
+    // background-color: #ffffff;
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.5); // Add a shadow effect
   }
   @media screen and (max-width:800px) {
-    .star{
-      display: none;
+     .falling-stars {
+      display: none; /* Hide on smaller screens */
     }
     
   }
