--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -38,7 +38,9 @@
             position: absolute;
             width: 100%;
             z-index: 3;
-            padding: 10px 10px;
+            padding: 10px 10px 10px 10px;
+            letter-spacing: 0.10em;
+
             transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
             background: linear-gradient(
                 180deg,
@@ -51,6 +53,8 @@
         .title {
             margin-bottom: 0;
             margin-top: 0;
+            margin-right: 13px;
+
             color: #ffd700;
             font-size: 24px;
             font-weight: 500;
@@ -58,6 +62,7 @@
         }
 
         .description {
+            margin-right: 13px;
             font-size: 14px;
             margin-bottom: 5px;
             color: #fff;
@@ -129,15 +134,22 @@
             .title{
                 font-size: 10px;
                 font-weight: bolder;
+                line-height: 20px;
                 color: #ffd700;
+                margin-right: 13px;
 
+                
             }
             .content{
-                padding: 2px 6px;
+                padding: 2px 6 px;
+                // letter-spacing: 0.10em;
+
             }
             .description{
                 font-size: 8px;
                 font-weight: bold;
+                margin-right: 12px;
+
             }
             .btn{
                 font-size: 6px;
