--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -175,7 +175,7 @@
         width: 100%;
         top: 0;
         left: 0;
-        background: #1f1414;
+        background: #181818;
         height: 100%;
         margin: 0;
         z-index: 2;
