--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -150,20 +150,30 @@ h2{
 
 
 @media screen and (max-width: 1200px) {
+    
     .pic{
-            padding-top: 40px;
-            padding-bottom: 20px;
-            width: 80%;
-            // max-width: 20px;
+            // padding-top: 40px;
+            // padding-bottom: 20px;
+            width: 100%;
+            left: 20px;
+            height: auto;
             float: none;
-            // width: 100%;
-            height: 400px;
-            margin: 0;
-            position: initial;
-            // display: block;
-            padding-left: 40px;
-            align-self: center;      
-            justify-self: center;  
+            overflow: hidden;
+             position: initial;
+             margin-top: 100px;
+             margin-bottom: 50px;
+             margin-right: 20px;
+             
+            // // max-width: 20px;
+            // float: none;
+            // // width: 100%;
+            // height: 400px;
+            // margin: 0;
+            // position: initial;
+            // // display: block;
+            // padding-left: 40px;
+            // align-self: center;      
+            // justify-self: center;  
     }
     .tags,
     .home-page h1::before, 
@@ -177,6 +187,7 @@ h2{
             transform: none;
             padding: 10px;
             box-sizing: border-box;
+            text-align: center;
         }
         .flat-button{
             float: none;
