--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -122,9 +122,9 @@
         width: 100%;
         height: 400px;
         margin: 0;
-        overflow: visible;
+        overflow:hidden;
         position: initial;
-        //  display: none;
+        display: none;
 
     }
     
@@ -134,10 +134,10 @@
         height: 400px;
         margin: 0;
         position: initial;
-        //  display: none;
+        display: none;
     }
     .tagcloud{
-        // display: none;
+        display: none;
         float: none;
         width: 100%;
         height: 400px;
