--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -163,6 +163,7 @@ h2{
              margin-top: 50px;
              margin-bottom: 50px;
              margin-right: 20px;
+             margin-left: -1px;
              
             // // max-width: 20px;
             // float: none;
@@ -204,7 +205,6 @@ h2{
 }
 @media screen and (max-width: 800px) {
 
-    
     .home-page{
         h1{
             font-size: 44px;
