--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -161,3 +161,10 @@
         }
     }
 }
+@media screen and (max-width: 800px) {
+    .image-box{
+        .btn{
+            font-size: 4px;
+        }
+    }
+}
