--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -6,11 +6,11 @@
   color: #ffd700;
   font-weight: 1000;
 }
-.about-page{
-  .text-zone{
-    overflow: auto;
-  }
-}
+// .about-page{
+//   .text-zone{
+//     // overflow:auto;
+//   }
+// }
 
 // p + p {
 //   text-indent: 30px;
