--- a/src/components/Blog/index.scss
+++ b/src/components/Blog/index.scss
@@ -195,7 +195,7 @@
             height: 200px;
             max-width: calc(50% - 10px);
             .description{
-                font-size: 10px;
+                font-size: 12px;
                 width: fit-content;
                 font-weight: 900;
                 color: #fff;
@@ -209,7 +209,7 @@
 
             }
             .title{
-                font-size: 10px;
+                font-size: 16px;
                 font-weight: bolder;
                 color: #ffd700;  
                 width: fit-content;
@@ -225,7 +225,7 @@
                 text-align: left;
                 align-self: center;
                 max-width: fit-content;
-                font-size: 8px;
+                font-size: 10px;
                 padding-left: 10px;
                 padding-right: 10px;
                 font-weight: 800;
@@ -259,7 +259,10 @@
             }
             
             .title{
-                line-height: 16px;                
+                line-height: 14px;                
+            }
+            .btn{
+                font-size: 9px;
             }
             
         }
