--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -172,9 +172,9 @@
         .image-box{
 
             .title{
-                font-size: 10px;
-
-
+                font-size: 11px;
+                font-weight: 900;
+                
                 
             }
 
