--- a/src/components/Blog/index.scss
+++ b/src/components/Blog/index.scss
@@ -259,7 +259,8 @@
             }
             
             .title{
-                line-height: 16px;                
+                line-height: 16px;    
+                font-size: 10px;            
             }
             
         }
