--- a/src/components/Blog/index.scss
+++ b/src/components/Blog/index.scss
@@ -260,7 +260,8 @@
             
             .title{
                 line-height: 16px;    
-                font-size: 10px;            
+                font-size: 10px;
+                font-weight: 900;            
             }
             
         }
