--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -77,8 +77,9 @@ h2{
     height: 650px; /* Maintain aspect ratio */
     border-radius: 40px;
     display: flex;
-    left: 700px;
-    top: 0px;
+    left: calc(100% - 1px);
+    // left: 700px;
+    top: -100px;
      border-bottom: 10px;
     margin-left: 40px;
     z-index: 5;
