--- a/src/components/Skills/index.scss
+++ b/src/components/Skills/index.scss
@@ -28,13 +28,14 @@
     // top:0;
     // left: 0;
     font-family: 'Inter', sans-serif;
-    font-weight: 700;
+    font-weight: 600;
     letter-spacing: 0.0625em;
     font-size: 1.3em;
 
 }
 .tagcloud--item{
     color: bisque;
+    // color: #72A8A1;
     text-transform: uppercase;
 }
 .tagcloud--item:hover{
@@ -89,9 +90,10 @@
         float: none;
         width: 100%;
         height: 400px;
-        margin: 0;
+        margin: 0 auto;
         overflow: visible;
         position: initial;
+
         // display: none;
 
     }
@@ -102,7 +104,12 @@
         height: 400px;
         margin: 0;
         position: initial;
+        justify-self: center;
+        align-self: center;
         // display: none;
+        margin: 0 auto; /* Centers horizontally */
+
+
     }
     .tagcloud{
         // display: none;
