--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,9 @@ body {
   font: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
   color: #444;
   /* background */
-  background: #456563;
-  /* background: #022c43; */
+   background: #456563; 
+  /* background: linear-gradient(180deg, #1E3A3A, #456563); */
+
   overflow: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
